# Azure-Fundamentals

./: .env.template  .gitignore  AddData2AISearch.py  AzureOpenAI.py  Azure_AI_Inference_Tool_Calling.py  BlobStorageAccess.py  CreateAISearchIndex.py  KeyVault.py  Keyless_Auth.py  README.md  RunDeepSeekR1.py  config.py  github_model_inference.py  main.py  pyproject.toml  requirements.txt  schema.json
AI_Search/: Datasource.py  Index.py  Skillset.py
