[project]
name = "azure-fundamentals"
version = "0.1.0"
description = ""
authors = [
    {name = "namtran6701",email = "nam3864779@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "azure-ai-inference (>=1.0.0b9,<2.0.0)",
    "azure-core (>=1.32.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
